<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">Settings</string>
    <string name="btnStartStop">REC</string>
    <string name="lblInfo">Fixing GPS position</string>
    <string name="lbl_tit_currentposition">Position</string>
    <string name="lbl_tit_recordtime">Time</string>
    <string name="lbl_tit_pointscount">Points</string>
    
    <string name="app_name">RoadRecorder</string>
    
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_config">ConfigActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    
    <!-- MenuItems -->
    <string name="menuitem_settings">Configuración</string>
    <string name="menuitem_help">Ayuda</string>
    <string name="menuitem_about">Acerca de RoadRecorder</string>
    <string name="menuitem_back">Volver atrás</string>
    
    <string name="about_title">RoadRecorder</string>
    <string name="about_content"><b><em>RoadRecorder</em></b> forma parte de las herramientas desarrolladas
        por <b><em>Mercatorlab</em></b> para la realización de inventarios de carreteras.\n
        Los vídeos georreferenciados grabados con <b><em>RoadRecorder</em></b> se pueden reproducir 
        con el programa <b><em>RoadPlayer</em></b> que permite su visualización y análisis.<br/>
        Puede encontrar más información acerca de ambos programas en:</string>        
    <string name="about_link_mercatorlab">http://mercatorlab.com</string>
    <string name="about_link_roadplayer">http://softwaredeingenieria.es/roadplayer</string>
    
    <string name="help_title">Ayuda de RoadRecorder</string>
    <string name="help_content1"> La utilización de este programa origina un alto consumo
        de batería, por lo que se recomienda su utilización conectado a la toma de corriente
        del automóvil.</string>
    <string name="help_content2"> Los ficheros de las grabaciones se almacenan en el directorio RoadRecorder
        del dispositivo o de la tarjeta de expansión de memoria si existe.\n
        Los vídeos quedan grabados en formato mp4.\n
        Los tracks se almacenan por duplicado: en formato csv y en formato gpx.\n
        A efectos de sincronización posterior, es importante no cambiar de nombre los ficheros.</string>
    <string name="help_content3">Fijación del smartphone al retrovisor del automóvil</string>
    
    <!-- OnlyVideoDialog -->
    <string name='dialogvideo_accept'>Aceptar</string>
    <string name='dialogvideo_cancel'>Cancelar</string>
    
    <!-- Prefrences -->
    <string name="pref_useextendedsdcard_title">Use Extended Sdcard</string>
    <string name="pref_useextendedsdcard_summary_on">Save using extended Sdcard activated</string>
    <string name="pref_useextendedsdcard_summary_off">Save using extended Sdcard deactivated</string>
    <string name="pref_useextendedsdcard_switch_text_on">ON</string>
    <string name="pref_useextendedsdcard_switch_text_off">OFF</string>

    <string name="pref_saveascsv_title">Save CSV</string>
    <string name="pref_saveascsv_summary_on">Save track as CSV file activated</string>
    <string name="pref_saveascsv_summary_off">Save track as CSV file deactivated</string>
    <string name="pref_saveascsv_switch_text_on">ON</string>
    <string name="pref_saveascsv_switch_text_off">OFF</string>
    <string name="pref_voicemessages_title">Voice messages</string>
    <string name="pref_voicemessages_summary_on">Voice messages activated</string>
    <string name="pref_voicemessages_summary_off">Voice messages deactivated</string>
    <string name="pref_voicemessages_switch_text_on">ON</string>
    <string name="pref_voicemessages_switch_text_off">OFF</string>
    
    <string name="pref_mindiskspace_category_title">Espacio mínimo de disco</string>
    <string name="pref_mindiskspace_title">Espacio de disco  (Megabytes)</string>
    <string name="pref_mindiskspace_summary">Mínimo espacio libre en el disco para comenzar a grabar</string>

    <string name="videoresolution_title">Resolución de vídeo</string>
    <string name="videoresolution_summary">Selección de la resolución del vídeo</string>
    <string name="videoresolution_dialogtitle">Seleccione la resolución</string>
    <string name="videoresolution_defaultvalue">high res</string>
    
    
</resources>
