<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuitem_config"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menuitem_config"/>
    <item
        android:id="@+id/menuitem_help"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menuitem_help"/>
    <item
        android:id="@+id/menuitem_about"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menuitem_about"/>
    <item
        android:id="@+id/menuitem_back"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menuitem_back"/>
    
</menu>
