<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/about_title"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16sp"
        android:text="@string/about_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12sp"
        android:text="@string/about_content" />

    <LinearLayout
        android:id="@+id/about_logos"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_below="@id/about_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/about_logo_mlab"
            android:layout_width="wrap_content"
            android:layout_height="80dip"
            android:layout_marginBottom="20sp"
            android:src="@drawable/mlablogo_200" >
        </ImageView>
        <ImageView
            android:id="@+id/about_logoscia"
            android:layout_width="wrap_content"
            android:layout_height="80dip"
            android:layout_marginBottom="20sp"
            android:src="@drawable/scia" >
        </ImageView>
    </LinearLayout>

    <TextView
        android:id="@+id/about_link"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_logos"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16sp"
        android:autoLink="web"
        android:text="@string/about_link_roadplayer" />

</RelativeLayout>